[package]
name = "yew-todo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = "0.3.2"
dioxus-web = "0.3.2"
gloo-storage = "0.2.2"
getrandom = { version = "0.2", features = ["js"] }
serde_json = "1.0.96"
serde = "1.0.163"

[dependencies.uuid]
version = "1.3.3"
features = ["v4", "fast-rng", "serde"]
